--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Dog Tinder</title>
-  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
   <div class="container-fluid">
     <div id="main"></div>
   </div>
 </body>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>  
   <script src="./dist/bundle.js"></script>
-  <script src="js/bootstrap.min.js"></script>
+  <!--<script src="js/bootstrap.min.js"></script>-->
+
 </html>
