Add Kennel div to index.html for prototyping

--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Dog Tinder</title>
   <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="./stylesheet.css" rel="stylesheet">
 </head>
 <body>
   <div class="container-fluid">
     <div id="main"></div>
+    <div id="kennel"></div>
   </div>
 </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
