--- a/public/_index.html
+++ b/public/_index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-  <div class="container-fluid">
+  <div class="container">
     <div id="main"></div>
     <div id="kennel"></div>
   </div>
