--- a/public/_index.html
+++ b/public/_index.html
@@ -8,6 +8,8 @@
 
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="./stylesheet.css" rel="stylesheet">
+  <link href="./css/font-awesome.min.css" rel="stylesheet">
+  <link href="./css/bootstrap-social.css" rel="stylesheet">
 
 </head>
 <body>
