Dumb hack to remove "#_=_" from address bar

--- a/public/_index.html
+++ b/public/_index.html
@@ -22,5 +22,10 @@
 </body>
   <script src="./dist/bundle.js"></script>
   <script src="js/bootstrap.min.js"></script>
+  <script type="text/javascript">
+    if (window.location.hash && window.location.hash == '#_=_') {
+        window.location.hash = '';
+    }
+</script>
 
 </html>
