--- a/public/_index.html
+++ b/public/_index.html
@@ -16,6 +16,7 @@
   <div class="container">
     <div id="main"></div>
   </div>
+  <footer class="container bd-footer text-muted" id="footer"></footer>
   <!--<script type="text/javascript" src="Scripts/bootstrap.min.js"></script>
 <script type="text/javascript" src="Scripts/jquery-2.1.1.min.js"></script>-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> 
@@ -23,7 +24,7 @@
   <script src="./dist/bundle.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script type="text/javascript">
-    if (window.location.hash && window.location.hash == '#_=_') {
+    if (window.location.hash && window.location.hash == '#_=_' || window.location.hash == '#') {
         window.location.hash = '';
     }
 </script>
