--- a/public/_index.html
+++ b/public/_index.html
@@ -24,7 +24,7 @@
   <script src="./dist/bundle.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script type="text/javascript">
-    if (window.location.hash && window.location.hash == '#_=_' || window.location.hash == '#') {
+    if (window.location.hash && window.location.hash == '#_=_') {
         window.location.hash = '';
     }
 </script>
