Adds 40px padding to container main

--- a/public/_index.html
+++ b/public/_index.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-  <div class="container">
+  <div class="container main" style="padding-left: 40px;">
     <div id="main"></div>
   </div>
   <footer class="container bd-footer text-muted" id="footer"></footer>
