Function to remove the hash in address bar fxrom Facebook redirect

--- a/public/_index.html
+++ b/public/_index.html
@@ -24,9 +24,13 @@
   <script src="./dist/bundle.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script type="text/javascript">
-    if (window.location.hash && window.location.hash == '#_=_') {
-        window.location.hash = '';
-    }
-</script>
+    $(window).on('load', function(e){
+      if (window.location.hash == '#_=_') {
+        window.location.hash = ''; // for older browsers, leaves a # behind
+        history.pushState('', document.title, window.location.pathname); // nice and clean
+        e.preventDefault(); // no page reload
+      };
+    });
+  </script>
 
 </html>
