--- a/public/_index.html
+++ b/public/_index.html
@@ -19,8 +19,9 @@
   <footer class="container bd-footer text-muted" id="footer"></footer>
   <!--<script type="text/javascript" src="Scripts/bootstrap.min.js"></script>
 <script type="text/javascript" src="Scripts/jquery-2.1.1.min.js"></script>-->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> 
 </body>
+  <script src="https://maps.googleapis.com/maps//api/js?v=3.27"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="./dist/bundle.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script type="text/javascript">
